--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ email: qianyue17@gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: minimal light
-description: The Minimal Light is a simple and elegant jekyll theme for academic personal homepage.
-canonical: https://minimal-light-theme.yliu.me/
+keywords: Huamao Xie, Beijing Jiaotong University, Cloud Computing, Multi-objective Optimization, Academic Homepage
+description: Welcome to the academic homepage of Huamao Xie, a Ph.D. student at Beijing Jiaotong University specializing in cloud computing and multi-objective optimization. Explore his research, publications, and academic contributions.
+canonical: https://maomao0217.github.io/academic-pages/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
